# python-data-tools

./: .gitignore  Makefile  README.md  my_database.db  pyproject.toml  test_filter.js
.github/workflows/: deploy.yml
chapters/load/: csv_bigquery.py  csv_duckdb.py  csv_pandas.py  csv_polars.py  database_bigquery.py  database_duckdb.py  database_pandas.py  database_polars.py
chapters/output/: database_polars.py
chapters/transform/: aggregate_bigquery.py  aggregate_duckdb.py  aggregate_pandas.py  aggregate_polars.py  filter_bigquery.py  filter_duckdb.py  filter_pandas.py  filter_polars.py  join_bigquery.py  join_duckdb.py  join_pandas.py  join_polars.py
notebooks/load/: cloud_duckdb.ipynb  cloud_pandas.ipynb  cloud_polars.ipynb  database_bigquery.ipynb  database_duckdb.ipynb  database_pandas.ipynb  database_polars.ipynb  load_csv_bigquery.ipynb  load_csv_duckdb.ipynb  load_csv_pandas.ipynb  load_csv_polars.ipynb  load_json_bigquery.ipynb  load_json_duckdb.ipynb  load_json_pandas.ipynb  load_json_polars.ipynb  load_parquet_bigquery.ipynb  load_parquet_duckdb.ipynb  load_parquet_pandas.ipynb  load_parquet_polars.ipynb
notebooks/output/: bigquery_bigquery.ipynb  bigquery_duckdb.ipynb  bigquery_pandas.ipynb  bigquery_polars.ipynb  database_bigquery.ipynb  database_duckdb.ipynb  database_pandas.ipynb  database_polars.ipynb  files_bigquery.ipynb  files_duckdb.ipynb  files_pandas.ipynb  files_polars.ipynb
notebooks/transform/: aggregate_bigquery.ipynb  (+23 more)
scripts/: sync_examples.py  verify_examples.py
webapp/: package-lock.json  package.json  svelte.config.js
(+16 files in other folders)
