[project]
name = "pydata-rosetta"
version = "0.1.0"
description = "Multi-platform comparison of data wrangling techniques"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "duckdb>=0.9",
    "polars>=0.20",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "connectorx>=0.3",
    "google-cloud-bigquery>=3.0",
    "db-dtypes>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "black>=23.0",
    "ruff>=0.1",
]
benchmark = [
    "memory-profiler>=0.61",
    "pytest-benchmark>=4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
